force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/GWB_Vacation_Coverage__c/GWB_Vacation_Coverage__c.object-meta.xml
<CustomObject>
    <description>Configuration object for Assembly OTS vacation coverage percentages by plant and entry/exit month-year.</description>
    <label>GWB Vacation Coverage</label>
    <nameField>
        <displayFormat>GWVC-{000000}</displayFormat>
        <label>Vacation Coverage Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GWB Vacation Coverages</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>