force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/GWB_Vacation_Coverage__c/fields/Auth_Region__c.field-meta.xml
<CustomField>
    <fullName>Auth_Region__c</fullName>
    <description>Auth region for vacation coverage. This will be taken from Plant.</description>
    <label>Auth Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>GWB_Region</valueSetName>
    </valueSet>
</CustomField>