force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/GWB_Vacation_Coverage__c/fields/Classification__c.field-meta.xml
<CustomField>
    <fullName>Classification__c</fullName>
    <label>Classification</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OTS</fullName>
                <default>true</default>
                <label>OTS</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>