force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/GWB_Vacation_Coverage__c/fields/Exit_Month_Year__c.field-meta.xml
<CustomField>
    <fullName>Exit_Month_Year__c</fullName>
    <label>Exit Month Year</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>