force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/GWB_Vacation_Coverage__c/fields/Plant__c.field-meta.xml
<CustomField>
    <fullName>Plant__c</fullName>
    <deleteConstraint>Cascade</deleteConstraint>
    <label>Plant</label>
    <referenceTo>Plant__c</referenceTo>
    <relationshipLabel>Vacation Coverages</relationshipLabel>
    <relationshipName>VacationCoverages</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>