force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/GWB_Vacation_Coverage__c/fields/Vacation_Percent__c.field-meta.xml
<CustomField>
    <fullName>Vacation_Percent__c</fullName>
    <label>Vacation Percent</label>
    <precision>5</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>